# mcp-calculator

./: .gitignore  README.md  mcp_pipe.py  pyproject.toml
xiaozhi_mcp/: __init__.py  __main__.py  pipe.py
